@@ -24,16 +24,22 @@ import org.apache.felix.ipojo.annotations.*;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.wisdom.api.Controller;
+import org.wisdom.api.content.ParameterConverters;
 import org.wisdom.api.http.HttpMethod;
 import org.wisdom.api.interception.Filter;
 import org.wisdom.api.interception.Interceptor;
-import org.wisdom.api.router.*;
+import org.wisdom.api.router.AbstractRouter;
+import org.wisdom.api.router.Route;
+import org.wisdom.api.router.RouteUtils;
+import org.wisdom.api.router.RoutingException;
 
 import javax.validation.Validator;
+import java.io.UnsupportedEncodingException;
+import java.net.URLEncoder;
 import java.util.*;
 
 /**
- * The route.
+ * The request router responsible for handling request and invoke the action methods.
  */
 @Component
 @Provides
@@ -42,10 +48,38 @@ public class RequestRouter extends AbstractRouter {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(RequestRouter.class);
 
+    private static final Map<String, String> PERCENT_ENCODING_MAP = new TreeMap<>();
+
+    static {
+        // Reserved characters.
+        PERCENT_ENCODING_MAP.put("/", "%2F");
+
+        // Common characters
+        PERCENT_ENCODING_MAP.put(" ", "%20");
+        PERCENT_ENCODING_MAP.put("\"", "%22");
+        PERCENT_ENCODING_MAP.put("%", "%25");
+        PERCENT_ENCODING_MAP.put("-", "%2D");
+        PERCENT_ENCODING_MAP.put("<", "%3C");
+        PERCENT_ENCODING_MAP.put(">", "%3E");
+        PERCENT_ENCODING_MAP.put("\\", "%5C");
+        PERCENT_ENCODING_MAP.put("ˆ", "%5E");
+        PERCENT_ENCODING_MAP.put("_", "%5F");
+        PERCENT_ENCODING_MAP.put("`", "%60");
+        PERCENT_ENCODING_MAP.put("{", "%7B");
+        PERCENT_ENCODING_MAP.put("|", "%7C");
+        PERCENT_ENCODING_MAP.put("}", "%7D");
+
+        // New line
+        PERCENT_ENCODING_MAP.put("\n", "%0A");
+    }
+
+    /**
+     * The comparator used to sort filters.
+     */
     private Set<Filter> filters = new TreeSet<>(new Comparator<Filter>() {
         @Override
         public int compare(Filter o1, Filter o2) {
-            return new Integer(o2.priority()).compareTo(o1.priority());
+            return Integer.valueOf(o2.priority()).compareTo(o1.priority());
         }
     });
 
@@ -55,8 +89,16 @@ public class RequestRouter extends AbstractRouter {
     @Requires(optional = true, proxy = false)
     private Validator validator;
 
+    @Requires(optional = true)
+    private ParameterConverters engine;
+
     private Set<RouteDelegate> routes = new LinkedHashSet<>();
 
+    /**
+     * Binds a new controller.
+     *
+     * @param controller the controller
+     */
     @Bind(aggregate = true)
     public synchronized void bindController(Controller controller) {
         LOGGER.info("Adding routes from " + controller);
@@ -79,6 +121,11 @@ public class RequestRouter extends AbstractRouter {
         }
     }
 
+    /**
+     * Unbinds a controller
+     *
+     * @param controller the controller
+     */
     @Unbind(aggregate = true)
     public synchronized void unbindController(Controller controller) {
         LOGGER.info("Removing routes from " + controller);
@@ -116,14 +163,11 @@ public class RequestRouter extends AbstractRouter {
         return false;
     }
 
-    @Validate
-    public void start() {
-        LOGGER.info("Router starting");
-    }
-
+    /**
+     * Stopping the router. All routes are cleared.
+     */
     @Invalidate
     public void stop() {
-        LOGGER.info("Router stopping");
         routes.clear();
     }
 
@@ -131,6 +175,13 @@ public class RequestRouter extends AbstractRouter {
         return new LinkedHashSet<Route>(routes);
     }
 
+    /**
+     * Gets the {@link org.wisdom.api.router.Route} object handling the given request.
+     *
+     * @param method the method the request method
+     * @param uri    the URL of the request
+     * @return the route, {@literal unbound} if no action method can handle the request.
+     */
     @Override
     public Route getRouteFor(HttpMethod method, String uri) {
         for (Route route : copy()) {
@@ -138,22 +189,32 @@ public class RequestRouter extends AbstractRouter {
                 return route;
             }
         }
+        // Creates an unbound route.
         return new RouteDelegate(this, new Route(method, uri, null, null));
     }
 
+    /**
+     * Gets the URL that would invoke the given action method.
+     *
+     * @param className the controller class
+     * @param method    the controller method
+     * @param params    map of parameter name - value
+     * @return the computed URL, {@literal null} if no route matches the given action method
+     */
     @Override
     public String getReverseRouteFor(String className, String method, Map<String, Object> params) {
         for (Route route : copy()) {
-
             if (route.getControllerClass().getName().equals(className)
                     && route.getControllerMethod().getName().equals(method)) {
-
                 return computeUrlForRoute(route, params);
             }
         }
         return null;
     }
 
+    /**
+     * @return a copy of the current routes.
+     */
     @Override
     public Collection<Route> getRoutes() {
         return copy();
@@ -171,20 +232,15 @@ public class RequestRouter extends AbstractRouter {
         Map<String, Object> queryParameterMap = Maps.newHashMap();
 
         for (Map.Entry<String, Object> entry : params.entrySet()) {
-
-            String originalRegex = String.format("{%s}", entry.getKey());
-            String originalRegexEscaped = String.format("\\{%s\\}", entry.getKey());
-
-            // The value that will be added into the regex => myId for instance...
-            String resultingRegexReplacement = entry.getValue().toString();
-
+            String originalRegexEscaped = String.format("\\{%s(\\+)?\\}", entry.getKey());
             // If regex is in the url as placeholder we replace the placeholder
-            if (urlWithReplacedPlaceholders.contains(originalRegex)) {
-
+            final boolean containVar = urlWithReplacedPlaceholders.contains("{" + entry.getKey() + "}");
+            final boolean containAndCanSpreadOnSeveralSegment
+                    = urlWithReplacedPlaceholders.contains("{" + entry.getKey() + "+}");
+            if (containVar || containAndCanSpreadOnSeveralSegment) {
                 urlWithReplacedPlaceholders = urlWithReplacedPlaceholders.replaceAll(
                         originalRegexEscaped,
-                        resultingRegexReplacement);
-
+                        pathEncode(entry.getValue().toString(), containAndCanSpreadOnSeveralSegment));
                 // If the parameter is not there as placeholder we add it as queryParameter
             } else {
                 queryParameterMap.put(entry.getKey(), entry.getValue());
@@ -192,7 +248,7 @@ public class RequestRouter extends AbstractRouter {
         }
 
         // now prepare the query string for this url if we got some query params
-        if (queryParameterMap.entrySet().isEmpty()) {
+        if (!queryParameterMap.entrySet().isEmpty()) {
 
             StringBuilder queryParameterStringBuffer = new StringBuilder();
 
@@ -203,7 +259,8 @@ public class RequestRouter extends AbstractRouter {
                 Map.Entry<String, Object> queryParameterEntry = iterator.next();
                 queryParameterStringBuffer.append(queryParameterEntry.getKey());
                 queryParameterStringBuffer.append("=");
-                queryParameterStringBuffer.append(queryParameterEntry.getValue());
+                // Don't forget to encode the value.
+                queryParameterStringBuffer.append(encode(queryParameterEntry.getValue().toString()));
 
                 if (iterator.hasNext()) {
                     queryParameterStringBuffer.append("&");
@@ -214,13 +271,38 @@ public class RequestRouter extends AbstractRouter {
             urlWithReplacedPlaceholders = urlWithReplacedPlaceholders
                     + "?"
                     + queryParameterStringBuffer.toString();
-
         }
 
 
         return urlWithReplacedPlaceholders;
     }
 
+    private String pathEncode(String s, boolean canSpreadOnSeveralSegments) {
+        String copy = s;
+        for (Map.Entry<String, String> c : PERCENT_ENCODING_MAP.entrySet()) {
+            if (s.contains(c.getKey())) {
+                if (c.getKey().endsWith("/")  && canSpreadOnSeveralSegments) {
+                    // The canSpreadOnSeveralSegments parameter is true when the uri contains + such as in {path+}. In this
+                    // case, we must not convert "/" by the percent value.
+                    continue;
+                }
+                copy = copy.replace(c.getKey(), c.getValue());
+            }
+        }
+        return copy;
+    }
+
+    private String encode(String v) {
+        try {
+            return URLEncoder.encode(v, "UTF-8");
+        } catch (UnsupportedEncodingException e) {
+            throw new IllegalArgumentException("UTF-8 not supported", e);
+        }
+    }
+
+    /**
+     * @return the validator object used to validate parameters.
+     */
     public Validator getValidator() {
         return validator;
     }
@@ -242,14 +324,37 @@ public class RequestRouter extends AbstractRouter {
         return interceptors;
     }
 
+    protected ParameterConverters getParameterConverterEngine() {
+        return engine;
+    }
+
+    /**
+     * Binds a filter.
+     *
+     * @param filter the filter
+     */
     @Bind(aggregate = true, optional = true)
     public void bindFilter(Filter filter) {
         filters.add(filter);
     }
 
+    /**
+     * Unbinds a filter.
+     *
+     * @param filter the filter
+     */
     @Unbind
     public void unbindFilter(Filter filter) {
         filters.remove(filter);
+    }
+
+    /**
+     * Sets the parameter converter engine. For testing purpose only.
+     *
+     * @param parameterConverterEngine the parameter converter engine
+     */
+    public void setParameterConverterEngine(ParameterConverters parameterConverterEngine) {
+        this.engine = parameterConverterEngine;
     }
 }
 
